RESOLVED FIXED150651
B3::LowerToAir should not duplicate Loads
https://bugs.webkit.org/show_bug.cgi?id=150651
Summary B3::LowerToAir should not duplicate Loads
Filip Pizlo
Reported 2015-10-28 17:47:46 PDT
Patch forthcoming.
Attachments
the patch (6.94 KB, patch)
2015-10-28 18:12 PDT, Filip Pizlo
no flags
the patch (7.26 KB, patch)
2015-10-28 18:19 PDT, Filip Pizlo
benjamin: review+
Filip Pizlo
Comment 1 2015-10-28 18:12:24 PDT
Created attachment 264280 [details] the patch
Filip Pizlo
Comment 2 2015-10-28 18:19:51 PDT
Created attachment 264281 [details] the patch
Filip Pizlo
Comment 3 2015-10-28 18:29:11 PDT
Note You need to log in before you can comment on or make changes to this bug.